@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- The keys for parameter specifications are now validated. If an unknown key
+  is seen then an exception will be thrown. This will help you catch typos in
+  your parameter specification. Implemented by Greg Oschwald. PR #8.
+
+
 0.19     2016-11-21
 
 - Non-inlinable Specio types caused a syntax error when used with positional
